@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -30,42 +31,58 @@ public class ContinuousAssessmentService implements ContinuousAssessmentServiceI
     public Optional<ContinuousAssessmentResponse> submitContinuousAssessment(ContinuousAssessmentRequest continuousAssessmentRequest) {
         ContinuousAssessment ca = continuousAssessmentUtil.mapContinuousAssessmentRequest_ToContinuousAssessment(continuousAssessmentRequest);
         continuousAssessmentRepository.save(ca);
-        continuousAssessmentUtil.continuousAssessmentGlobalList.add(ca);
+        ContinuousAssessmentUtil.continuousAssessmentGlobalList.add(ca);
         return Optional.empty();
     }
 
     @Override
     public Optional<ContinuousAssessmentResponse> submitContinuousAssessments(List<ContinuousAssessmentRequest> continuousAssessmentRequest) {
-        List<ContinuousAssessment> ca = continuousAssessmentRequest.stream().map(car -> continuousAssessmentUtil.mapContinuousAssessmentRequest_ToContinuousAssessment(car)).collect(Collectors.toList());
-        continuousAssessmentRepository.saveAll(ca);
-        continuousAssessmentUtil.continuousAssessmentGlobalList.addAll(ca);
+
+   /*     List<ContinuousAssessment> ca = continuousAssessmentRequest.stream()
+                .map(continuousAssessmentUtil::mapContinuousAssessmentRequest_ToContinuousAssessment).toList();*/
+
+        Map<Boolean, List<ContinuousAssessment>> partitioned = continuousAssessmentRequest.stream()
+                .map(continuousAssessmentUtil::mapContinuousAssessmentRequest_ToContinuousAssessment)
+                .collect(Collectors.partitioningBy(ca -> ContinuousAssessmentUtil.continuousAssessmentGlobalList.stream()
+                        .anyMatch(existingCa -> existingCa.getStudentId().equals(ca.getStudentId()) &&
+                                existingCa.getInstitutionCode().equals(ca.getInstitutionCode()) &&
+                                existingCa.getTerm().equals(ca.getTerm()) &&
+                                existingCa.getSubject().equals(ca.getSubject()) &&
+                                existingCa.getAcademicYear().equals(ca.getAcademicYear()))));
+
+        List<ContinuousAssessment> existingRecords = partitioned.get(true);  // Existing records
+        List<ContinuousAssessment> newRecords = partitioned.get(false);     // New records
+
+        continuousAssessmentRepository.saveAll(existingRecords);
+        continuousAssessmentRepository.saveAll(newRecords);
+        ContinuousAssessmentUtil.continuousAssessmentGlobalList.addAll(newRecords);
         return Optional.empty();
     }
 
     @Override
     public List<ContinuousAssessmentResponse> getContinuousAssessmentByStudent(ContinuousAssessmentRequest continuousAssessmentRequest) {
-        List<ContinuousAssessment> ca = continuousAssessmentUtil.continuousAssessmentGlobalList.stream().filter(
+        List<ContinuousAssessment> ca = ContinuousAssessmentUtil.continuousAssessmentGlobalList.stream().filter(
                 car -> car.getStudentId().equalsIgnoreCase(continuousAssessmentRequest.getStudentId())
                         && car.getSubject().equals(continuousAssessmentRequest.getSubject())
                         && car.getTerm().equalsIgnoreCase(continuousAssessmentRequest.getTerm())
                         && car.getStudentClass().equalsIgnoreCase(continuousAssessmentRequest.getStudentClass())
                         && car.getAcademicYear().equalsIgnoreCase(continuousAssessmentRequest.getAcademicYear())
                 // && car.getDateTime().toLocalDate().equalsIgnoreCase(LocalDateTime.parse(continuousAssessmentRequest.getDateTime(),formatter).toLocalDate())
-        ).collect(Collectors.toList());
-        return ca.stream().map(car -> continuousAssessmentUtil.mapContinuousAssessment_ToContinuousAssessmentResponse(car)).collect(Collectors.toList());
+        ).toList();
+        return ca.stream().map(continuousAssessmentUtil::mapContinuousAssessment_ToContinuousAssessmentResponse).toList();
 
     }
 
     @Override
     public List<ContinuousAssessmentResponse> getContinuousAssessmentByClass(ContinuousAssessmentRequest continuousAssessmentRequest) {
-        List<ContinuousAssessment> ca = continuousAssessmentUtil.continuousAssessmentGlobalList.stream().filter(
+        List<ContinuousAssessment> ca = ContinuousAssessmentUtil.continuousAssessmentGlobalList.stream().filter(
                 car -> car.getSubject().equals(continuousAssessmentRequest.getSubject())
                         && car.getTerm().equalsIgnoreCase(continuousAssessmentRequest.getTerm())
                         && car.getStudentClass().equalsIgnoreCase(continuousAssessmentRequest.getStudentClass())
                         && car.getAcademicYear().equalsIgnoreCase(continuousAssessmentRequest.getAcademicYear())
                 //&& car.getDateTime().toLocalDate().equalsIgnoreCase(LocalDateTime.parse(continuousAssessmentRequest.getDateTime(),formatter).toLocalDate())
-        ).collect(Collectors.toList());
-        return ca.stream().map(car -> continuousAssessmentUtil.mapContinuousAssessment_ToContinuousAssessmentResponse(car)).collect(Collectors.toList());
+        ).toList();
+        return ca.stream().map(continuousAssessmentUtil::mapContinuousAssessment_ToContinuousAssessmentResponse).toList();
 
     }
 }
