@@ -2,9 +2,11 @@ package com.astromyllc.shootingstar.academics.service;
 
 import com.astromyllc.shootingstar.academics.dto.request.ExamsAssessmentRequest;
 import com.astromyllc.shootingstar.academics.dto.response.ExamsAssessmentResponse;
+import com.astromyllc.shootingstar.academics.model.ContinuousAssessment;
 import com.astromyllc.shootingstar.academics.model.ExamsAssessment;
 import com.astromyllc.shootingstar.academics.repository.ExamsAssessmentRepository;
 import com.astromyllc.shootingstar.academics.serviceInterface.ExamsAssessmentServiceInterface;
+import com.astromyllc.shootingstar.academics.util.ContinuousAssessmentUtil;
 import com.astromyllc.shootingstar.academics.util.ExamsAssessmentUtil;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -14,6 +16,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -31,118 +34,130 @@ public class ExamsAssessmentService implements ExamsAssessmentServiceInterface {
     public Optional<ExamsAssessmentResponse> submitExamsAssessment(ExamsAssessmentRequest examsAssessmentRequest) {
         ExamsAssessment ea= examsAssessmentUtil.mapExamsAssessmentRequest_ToExamsAssessment(examsAssessmentRequest);
         examsAssessmentRepository.save(ea);
-        examsAssessmentUtil.examsAssessmentGlobalList.add(ea);
+        ExamsAssessmentUtil.examsAssessmentGlobalList.add(ea);
         return Optional.empty();
     }
 
     @Override
     public Optional<ExamsAssessmentResponse> submitExamsAssessments(List<ExamsAssessmentRequest> examsAssessmentRequests) {
-        List <ExamsAssessment> ea= examsAssessmentRequests.stream().map(examsAssessmentUtil::mapExamsAssessmentRequest_ToExamsAssessment).collect(Collectors.toList());
+      /*  List <ExamsAssessment> ea= examsAssessmentRequests.stream().map(examsAssessmentUtil::mapExamsAssessmentRequest_ToExamsAssessment).toList();
         examsAssessmentRepository.saveAll(ea);
-        examsAssessmentUtil.examsAssessmentGlobalList.addAll(ea);
+        ;*/
+
+
+        Map<Boolean, List<ExamsAssessment>> partitioned = examsAssessmentRequests.stream()
+                .map(examsAssessmentUtil::mapExamsAssessmentRequest_ToExamsAssessment)
+                .collect(Collectors.partitioningBy(ca -> ExamsAssessmentUtil.examsAssessmentGlobalList.stream()
+                        .anyMatch(existingCa -> existingCa.getStudentId().equals(ca.getStudentId()) &&
+                                existingCa.getInstitutionCode().equals(ca.getInstitutionCode()) &&
+                                existingCa.getTerm().equals(ca.getTerm()) &&
+                                existingCa.getSubject().equals(ca.getSubject()) &&
+                                existingCa.getAcademicYear().equals(ca.getAcademicYear()))));
+
+        List<ExamsAssessment> existingRecords = partitioned.get(true);  // Existing records
+        List<ExamsAssessment> newRecords = partitioned.get(false);     // New records
+
+        examsAssessmentRepository.saveAll(existingRecords);
+        examsAssessmentRepository.saveAll(newRecords);
+        ExamsAssessmentUtil.examsAssessmentGlobalList.addAll(newRecords);
+
         return Optional.empty();
     }
 
     @Override
     public List<Optional<ExamsAssessmentResponse>> getExamsAssessmentByStudent(ExamsAssessmentRequest examsAssessmentRequest) {
-        List <ExamsAssessment> ea=examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List <ExamsAssessment> ea= ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 car->car.getStudentId().equalsIgnoreCase(examsAssessmentRequest.getStudentId())
                         && car.getSubject().equals(examsAssessmentRequest.getSubject())
                         && car.getTerm().equalsIgnoreCase(examsAssessmentRequest.getTerm())
-                        && car.getDateTime().toLocalDate().equals(LocalDateTime.parse(examsAssessmentRequest.getDateTime(),formatter).toLocalDate())).collect(Collectors.toList());
-        return ea.stream().map(car->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(car)).collect(Collectors.toList());
+                        && car.getDateTime().toLocalDate().equals(LocalDateTime.parse(examsAssessmentRequest.getDateTime(),formatter).toLocalDate())).toList();
+        return ea.stream().map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList();
     }
 
     @Override
     public List<Optional<ExamsAssessmentResponse>> getExamsAssessmentByClass(ExamsAssessmentRequest examsAssessmentRequest) {
-        List <ExamsAssessment> ea=examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List <ExamsAssessment> ea= ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 car->car.getSubject().equals(examsAssessmentRequest.getSubject())
                         && car.getTerm().equalsIgnoreCase(examsAssessmentRequest.getTerm())
-                        && car.getDateTime().toLocalDate().equals(LocalDateTime.parse(examsAssessmentRequest.getDateTime(),formatter).toLocalDate())).collect(Collectors.toList());
-        return ea.stream().map(ear->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(ear)).collect(Collectors.toList());
+                        && car.getDateTime().toLocalDate().equals(LocalDateTime.parse(examsAssessmentRequest.getDateTime(),formatter).toLocalDate())).toList();
+        return ea.stream().map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList();
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Student in a given Academic Term
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchExamsAssessmentsForStudentPerTerm(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentId().equalsIgnoreCase(ea.getStudentId())
                 && e.getAcademicYear().equalsIgnoreCase(ea.getAcademicYear())
                 && e.getTerm().equalsIgnoreCase(ea.getTerm())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Student in a given Academic Year
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchExamsAssessmentsForStudentPerAcademicYear(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentId().equalsIgnoreCase(ea.getStudentId())
                         && e.getAcademicYear().equalsIgnoreCase(ea.getAcademicYear())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Student in a given Academic Year
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchStudentProgressionReport(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentId().equalsIgnoreCase(ea.getStudentId())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Class in a given Academic Term
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchExamsAssessmentsForClassPerTerm(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentClass().equalsIgnoreCase(ea.getStudentClass())
                         && e.getAcademicYear().equalsIgnoreCase(ea.getAcademicYear())
                         && e.getTerm().equalsIgnoreCase(ea.getTerm())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Class in a given Academic Year
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchExamsAssessmentsForClassPerAcademicYear(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentClass().equalsIgnoreCase(ea.getStudentClass())
                         && e.getAcademicYear().equalsIgnoreCase(ea.getAcademicYear())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 
     /**
      *
-     * @param examsAssessmentRequest
      * @return a List of Exams results for all subjects of a given Class in a given Academic Year
      */
     @Override
     public List<List<Optional<ExamsAssessmentResponse>>> fetchPerformance(List<ExamsAssessmentRequest> examsAssessmentRequest) {
-        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e->examsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
+        List<List<Optional<ExamsAssessmentResponse>>> eax= examsAssessmentRequest.stream().map(e-> ExamsAssessmentUtil.examsAssessmentGlobalList.stream().filter(
                 ea->e.getStudentClass().equalsIgnoreCase(ea.getStudentClass())
-        ).map(r->examsAssessmentUtil.mapExamsAssessment_ToExamsAssessmentResponse(r)).collect(Collectors.toList())).collect(Collectors.toList());
+        ).map(examsAssessmentUtil::mapExamsAssessment_ToExamsAssessmentResponse).toList()).toList();
         return eax;
     }
 }
