@@ -1,10 +1,8 @@
 package com.astromyllc.shootingstar.finance.service;
 
-import com.astromyllc.shootingstar.finance.dto.request.BillFetchRequest;
 import com.astromyllc.shootingstar.finance.dto.request.BillingFetchRequest;
 import com.astromyllc.shootingstar.finance.dto.request.BillingsRequest;
 import com.astromyllc.shootingstar.finance.dto.response.BillingsResponse;
-import com.astromyllc.shootingstar.finance.model.Bill;
 import com.astromyllc.shootingstar.finance.model.Billings;
 import com.astromyllc.shootingstar.finance.repositoy.BillingsRepository;
 import com.astromyllc.shootingstar.finance.serviceInterface.BillingsServiceInterface;
@@ -17,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +28,7 @@ public class BillingsService implements BillingsServiceInterface {
     @Override
     public BillingsResponse updateBilling(BillingsRequest billingsRequest) {
 
-        Optional<Billings> billings = billingsUtil.billingGlobalList.stream().filter(
+        Optional<Billings> billings = BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billingsRequest.getInstitutionCode())
                         && b.getBillname().equalsIgnoreCase(billingsRequest.getBillname().get(0))).findFirst();
         if (billings.isEmpty()) {
@@ -51,8 +48,8 @@ public class BillingsService implements BillingsServiceInterface {
     @Override
     public Optional<List<BillingsResponse>> createBillings(BillingsRequest billingsRequest) {
 
-     return  Optional.ofNullable(billingsRequest.getStudentId().stream()
-                .flatMap(stud -> billsUtil.billGlobalList.stream()
+     return  Optional.of(billingsRequest.getStudentId().stream()
+                .flatMap(stud -> BillUtil.billGlobalList.stream()
                         .filter(bill -> billingsRequest.getInstitutionCode().equalsIgnoreCase(bill.getInstitutionCode()) &&
                                 billingsRequest.getBillname().stream()
                                         .anyMatch(request -> request.equalsIgnoreCase(bill.getBill_Name()))
@@ -67,50 +64,50 @@ public class BillingsService implements BillingsServiceInterface {
                                 bill.getBill_Name(),
                                 stud)
                         )
-                ).map(b->billingsUtil.mapBillings_ToBillingResponse(b))
-                .collect(Collectors.toList()));
+                ).map(billingsUtil::mapBillings_ToBillingResponse)
+                .toList());
 
     }
 
     @Override
     public Optional<List<BillingsResponse>> fetchBillingsByInstitution(BillingFetchRequest billFetchRequest) {
-        return Optional.ofNullable(billingsUtil.billingGlobalList.stream().filter(
+        return Optional.of(BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billFetchRequest.getInstitutionCode()))
-                .map(billingsUtil::mapBillings_ToBillingResponse).collect(Collectors.toList()));
+                .map(billingsUtil::mapBillings_ToBillingResponse).toList());
     }
 
     @Override
     public Optional<List<BillingsResponse>> fetchBillingByInstitutionAndStudent(BillingFetchRequest billingFetchRequest) {
-        return Optional.ofNullable(billingsUtil.billingGlobalList.stream().filter(
+        return Optional.of(BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billingFetchRequest.getInstitutionCode())
                         && b.getStudentId().equalsIgnoreCase(billingFetchRequest.getStudentId()))
-                .map(billingsUtil::mapBillings_ToBillingResponse).collect(Collectors.toList()));
+                .map(billingsUtil::mapBillings_ToBillingResponse).toList());
     }
 
     @Override
     public Optional<List<BillingsResponse>> fetchBillingByInstitutionStudentClassTerm(BillingFetchRequest billingFetchRequest) {
-        return Optional.ofNullable(billingsUtil.billingGlobalList.stream().filter(
+        return Optional.of(BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billingFetchRequest.getInstitutionCode())
                         && b.getStudentId().equalsIgnoreCase(billingFetchRequest.getStudentId())
                         && b.getStudentClass().equalsIgnoreCase(billingFetchRequest.getStudentClass())
                         && b.getTerm().equalsIgnoreCase(billingFetchRequest.getTerm()))
-                .map(billingsUtil::mapBillings_ToBillingResponse).collect(Collectors.toList()));
+                .map(billingsUtil::mapBillings_ToBillingResponse).toList());
     }
 
     @Override
     public Optional<List<BillingsResponse>> fetchClassBillingByInstitution(BillingFetchRequest billingFetchRequest) {
-        return Optional.ofNullable(billingsUtil.billingGlobalList.stream().filter(
+        return Optional.of(BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billingFetchRequest.getInstitutionCode())
                         && b.getStudentClass().equalsIgnoreCase(billingFetchRequest.getStudentClass())
                         && b.getTerm().equalsIgnoreCase(billingFetchRequest.getTerm()))
-                .map(br -> billingsUtil.mapBillings_ToBillingResponse(br)).collect(Collectors.toList()));
+                .map(billingsUtil::mapBillings_ToBillingResponse).toList());
     }
 
     @Override
     public Optional<List<BillingsResponse>> fetchSchoolBillingByInstitution(BillingFetchRequest billingFetchRequest) {
-        return Optional.ofNullable(billingsUtil.billingGlobalList.stream().filter(
+        return Optional.of(BillingsUtil.billingGlobalList.stream().filter(
                 b -> b.getInstitutionCode().equalsIgnoreCase(billingFetchRequest.getInstitutionCode())
                         && b.getTerm().equalsIgnoreCase(billingFetchRequest.getTerm()))
-                .map(br -> billingsUtil.mapBillings_ToBillingResponse(br)).collect(Collectors.toList()));
+                .map(billingsUtil::mapBillings_ToBillingResponse).toList());
     }
 }
