@@ -1,10 +1,8 @@
 package com.astromyllc.shootingstar.setup.service;
 
 import com.astromyllc.shootingstar.setup.dto.request.GradingSettingRequest;
-import com.astromyllc.shootingstar.setup.dto.request.InstitutionRequest;
 import com.astromyllc.shootingstar.setup.dto.request.SingleStringRequest;
 import com.astromyllc.shootingstar.setup.dto.response.GradingSettingResponse;
-import com.astromyllc.shootingstar.setup.model.GradingSetting;
 import com.astromyllc.shootingstar.setup.model.Institution;
 import com.astromyllc.shootingstar.setup.repository.GradingSettingRepository;
 import com.astromyllc.shootingstar.setup.repository.InstitutionRepository;
@@ -18,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,21 +33,21 @@ public class GradingSystemService implements GradingSettingsServiceInterface {
 
     @Override
     public Optional<GradingSettingResponse> createGradingSettingDetails(GradingSettingRequest gradingSettingRequestList) {
-      Institution ins= institutionUtils.institutionGlobalList.stream().filter(i->i.getBececode().equalsIgnoreCase(gradingSettingRequestList.getInstitution())).findFirst().get();
-      ins.setGradingSetting(gradingSettingUtil.mapGradeSettingRequest_ToGradeSetting(gradingSettingRequestList.getGradingSettingDetails()));
+      Institution ins= InstitutionUtils.institutionGlobalList.stream().filter(i->i.getBececode().equalsIgnoreCase(gradingSettingRequestList.getInstitution())).findFirst().get();
+      ins.setGradingSetting(GradingSettingUtil.mapGradeSettingRequest_ToGradeSetting(gradingSettingRequestList.getGradingSettingDetails()));
     institutionRepository.save(ins);
-    return gradingSettingUtil.mapGradeSetting_ToGradeSettingResponse(ins.getGradingSetting());
+    return GradingSettingUtil.mapGradeSetting_ToGradeSettingResponse(ins.getGradingSetting());
     }
 
     @Override
     public List<Optional<GradingSettingResponse>> getAllGradingSettings() {
-        return gradingSettingUtil.gradingSettingsGlobalList.stream().map(g->gradingSettingUtil.mapGradeSetting_ToGradeSettingResponse(g)).collect(Collectors.toList());
+        return GradingSettingUtil.gradingSettingsGlobalList.stream().map(GradingSettingUtil::mapGradeSetting_ToGradeSettingResponse).toList();
     }
 
     @Override
     public Optional<GradingSettingResponse> getAllGradingSettingsByInstitution(SingleStringRequest institutionRequest1) {
         String institutionRequest= institutionRequest1.getVal();
-        return institutionUtils.institutionGlobalList.stream()
+        return InstitutionUtils.institutionGlobalList.stream()
                 .filter(i -> i.getBececode().equalsIgnoreCase(institutionRequest))
                 .findFirst()
                 .flatMap(institution -> GradingSettingUtil.mapGradeSetting_ToGradeSettingResponse(institution.getGradingSetting()));
