@@ -1,7 +1,6 @@
 package com.astromyllc.shootingstar.setup.utils;
 
 import com.astromyllc.shootingstar.setup.dto.request.DepartmentDetails;
-import com.astromyllc.shootingstar.setup.dto.request.DepartmentRequest;
 import com.astromyllc.shootingstar.setup.dto.response.DepartmentResponse;
 import com.astromyllc.shootingstar.setup.model.Department;
 import com.astromyllc.shootingstar.setup.repository.DepartmentRepository;
@@ -12,7 +11,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -24,19 +22,19 @@ public class DepartmentUtil {
     @Bean
     private void fetAllDepartment(){
         departmentGlobalList=departmentRepository.findAll();
-        log.info("Global Department List populated with {} records",departmentGlobalList.stream().count());
+        log.info("Global Department List populated with {} records", (long) departmentGlobalList.size());
     }
 
     public static Department mapDepartmentRequest_ToDepartment(DepartmentDetails dr) {
         return Department.builder()
                 .name(dr.getName())
-                .designationList(dr.getDesignationList().stream().map(des-> DesignationUtil.mapDesignationRequest_ToDesignation(des)).toList())
+                .designationList(dr.getDesignationList().stream().map(DesignationUtil::mapDesignationRequest_ToDesignation).toList())
                 .build();
     }
 
     public static Department mapDepartmentRequest_ToDepartment(DepartmentDetails dr, Department d) {
                 d.setName(dr.getName());
-                d.setDesignationList(dr.getDesignationList().stream().map(des-> DesignationUtil.mapDesignationRequest_ToDesignation(des,d.getDesignationList().stream().filter(des1->des.getIdDesignation().equals(des1.getIdDesignation())).findFirst().get())).collect(Collectors.toList()));
+                d.setDesignationList(dr.getDesignationList().stream().map(des-> DesignationUtil.mapDesignationRequest_ToDesignation(des,d.getDesignationList().stream().filter(des1->des.getIdDesignation().equals(des1.getIdDesignation())).findFirst().get())).toList());
                 return d;
     }
 
@@ -44,7 +42,7 @@ public class DepartmentUtil {
         return Optional.ofNullable(DepartmentResponse.builder()
                 .idDepartment(d.getIdDepartment())
                 .name(d.getName())
-                .designationList(d.getDesignationList().stream().map(des-> DesignationUtil.mapDesignation_ToDesignationResponse(des)).toList())
+                .designationList(d.getDesignationList().stream().map(DesignationUtil::mapDesignation_ToDesignationResponse).toList())
                 .build());
     }
 
